alarm sound added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	</div>
 	<div class="timer__countdownContainer">
 		<input type="number" class="timer__countdownContainer-numbers remainHours" value="00"></input>
+		<p>:</p>
 		<input type="number" class="timer__countdownContainer-numbers remainMinutes" value="25"></input>
+		<p>:</p>
 		<input type="number" class="timer__countdownContainer-numbers remainSeconds" value="00"></input>
 	</div>
 	<button class="timer__startButton"></button>
@@ -42,6 +44,8 @@
 	<input type="checkbox" name="">
 </div>
 <button class="startTimer">Iniciar</button>
+<audio class="alarm" src="assets/alarm-clock.mp3" controls=""></audio>
 <script type="text/javascript" src="app.js"></script>
+<!--<script type="text/javascript" src="other.js"></script>-->
 </body>
 </html>
