--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title id="title"></title>
+	<title id="title">Podomoro clock</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body> 
 <div class="timer">
@@ -13,12 +19,24 @@
 	<div class="timer__countdownContainer">
 		<!--<input type="number" class="timer__countdownContainer-numbers remainHours" value="00"></input>
 		<p>:</p>-->
-		<input type="number" class="timer__countdownContainer-numbers remainMinutes" value="25"></input>
-		<p>:</p>
-		<input type="number" class="timer__countdownContainer-numbers remainSeconds" value="00"></input>
+		<div class="timer__countdownContainer-background">
+			<input type="number" class="timer__countdownContainer-background-numbers remainMinutes" value="25"></input>
+		</div>
+		<p class="timer__countdownContainer-background-numbers points">:</p>
+		<div class="timer__countdownContainer-background">
+			<input type="number" class="timer__countdownContainer-background-numbers remainSeconds" value="00"></input>
+		</div>
 	</div>
-	<button class="timer__startButton"></button>
-	<button class="timer__resetButton"></button>
+	<div class="timer__info">
+		<p class="timer__info-text">Minutes</p>
+		<p class="timer__info-text">Seconds</p>
+	</div>
+	<div class="timer__buttonContainer">
+		<button class="timer__startButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Play</p><i class="fas fa-play timer__buttonContainer-button-icon"></i></button>
+	</div>
+	<div class="timer__buttonContainer">
+		<button class="timer__resetButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Reset</p><i class="fas fa-retweet timer__buttonContainer-button-icon"></i></button>
+	</div>
 </div>
 <!--<div class="configMenu">
 	<img src="#" class="configMenu__closeMenu">
