buttons position fixed

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 		<p class="timer__info-text">Minutes</p>
 		<p class="timer__info-text">Seconds</p>
 	</div>
-	<div class="timer__buttonContainer">
-		<button class="timer__startButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Play</p><i class="fas fa-play timer__buttonContainer-button-icon"></i></button>
-	</div>
-	<div class="timer__buttonContainer">
-		<button class="timer__resetButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Reset</p><i class="fas fa-retweet timer__buttonContainer-button-icon"></i></button>
+	<div class="buttonsContainerFlex">
+		<div class="timer__buttonContainer">
+			<button class="timer__startButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Play</p><i class="fas fa-play timer__buttonContainer-button-icon"></i></button>
+		</div>
+		<div class="timer__buttonContainer">
+			<button class="timer__resetButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Reset</p><i class="fas fa-retweet timer__buttonContainer-button-icon"></i></button>
+		</div>
 	</div>
 </div>
 <!--<div class="configMenu">
