--- a/index.html
+++ b/index.html
@@ -1,70 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title id="title">Podomoro clock</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<link rel="icon" type="text/css" href="assets/ClipartKey_528941 (1).png">
-</head>
-<body> 
-<div class="timer">
-	<!--<div class="timer__config">
-		<img src="#" class="timer__config-img">
-	</div>-->
-	<div class="timer__countdownContainer">
-		<!--<input type="number" class="timer__countdownContainer-numbers remainHours" value="00"></input>
-		<p>:</p>-->
-		<div class="timer__countdownContainer-background">
-			<input type="number" class="timer__countdownContainer-background-numbers remainMinutes" value="25"></input>
-		</div>
-		<p class="timer__countdownContainer-background-numbers points">:</p>
-		<div class="timer__countdownContainer-background">
-			<input type="number" class="timer__countdownContainer-background-numbers remainSeconds" value="00"></input>
-		</div>
-	</div>
-	<div class="timer__info">
-		<p class="timer__info-text">Minutes</p>
-		<p class="timer__info-text">Seconds</p>
-	</div>
-	<div class="buttonsContainerFlex">
-		<div class="timer__buttonContainer">
-			<button class="timer__startButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Play</p><i class="fas fa-play timer__buttonContainer-button-icon"></i></button>
-		</div>
-		<div class="timer__buttonContainer">
-			<button class="timer__resetButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Reset</p><i class="fas fa-retweet timer__buttonContainer-button-icon"></i></button>
-		</div>
-	</div>
-</div>
-<!--<div class="configMenu">
-	<img src="#" class="configMenu__closeMenu">
-	<p class="configMenu__info">Work time duration:</p>
-	<input type="number" name="" value="00">
-	<input type="number" name="" value="25">
-	<input type="number" name="" value="00"> 
-	<p class="configMenu__info">Short rest duration:</p>
-	<input type="number" name="" value="00" id="shortRestHours">
-	<input type="number" name="" value="5" id="shortRestMinutes">
-	<input type="number" name="" value="00" id="shortRestSeconds"> 
-	<p class="configMenu__info">Long rest duration:</p>
-	<input type="number" name="" value="00">
-	<input type="number" name="" value="15">
-	<input type="number" name="" value="00"> 
-	<p class="configMenu__info">Long rest after sesion:</p>
-	<input type="number" name="" value="4">
-	<p class="configMenu__info">Theme color</p>
-	<button class="configMenu__colorButton"></button>
-	<button class="configMenu__colorButton"></button>
-	<button class="configMenu__colorButton"></button>
-	<p class="configMenu__info">Dark Mode</p>
-	<input type="checkbox" name="">
-</div>-->
-<audio class="alarm" src="assets/alarm-clock.mp3" controls=""></audio>
-<script type="text/javascript" src="app.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title id="title">Podomoro clock</title><link rel="stylesheet" type="text/css" href="styles.css"><link rel="stylesheet" type="text/css" href="normalize.css"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"><link rel="icon" type="text/css" href="assets/ClipartKey_528941 (1).png"></head><body> <div class="timer"><!--<div class="timer__config"><img src="#" class="timer__config-img"></div>--><div class="timer__countdownContainer"><!--<input type="number" class="timer__countdownContainer-numbers remainHours" value="00"></input><p>:</p>--><div class="timer__countdownContainer-background"><input type="number" class="timer__countdownContainer-background-numbers remainMinutes" value="25"></input></div><p class="timer__countdownContainer-background-numbers points">:</p><div class="timer__countdownContainer-background"><input type="number" class="timer__countdownContainer-background-numbers remainSeconds" value="00"></input></div></div><div class="timer__info"><p class="timer__info-text">Minutes</p><p class="timer__info-text">Seconds</p></div><div class="buttonsContainerFlex"><div class="timer__buttonContainer"><button class="timer__startButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Play</p><i class="fas fa-play timer__buttonContainer-button-icon"></i></button></div><div class="timer__buttonContainer"><button class="timer__resetButton timer__buttonContainer-button"><p class="timer__buttonContainer-button-text">Reset</p><i class="fas fa-retweet timer__buttonContainer-button-icon"></i></button></div></div></div><!--<div class="configMenu"><img src="#" class="configMenu__closeMenu"><p class="configMenu__info">Work time duration:</p><input type="number" name="" value="00"><input type="number" name="" value="25"><input type="number" name="" value="00"> <p class="configMenu__info">Short rest duration:</p><input type="number" name="" value="00" id="shortRestHours"><input type="number" name="" value="5" id="shortRestMinutes"><input type="number" name="" value="00" id="shortRestSeconds"> <p class="configMenu__info">Long rest duration:</p><input type="number" name="" value="00"><input type="number" name="" value="15"><input type="number" name="" value="00"> <p class="configMenu__info">Long rest after sesion:</p><input type="number" name="" value="4"><p class="configMenu__info">Theme color</p><button class="configMenu__colorButton"></button><button class="configMenu__colorButton"></button><button class="configMenu__colorButton"></button><p class="configMenu__info">Dark Mode</p><input type="checkbox" name=""></div>--><audio class="alarm" src="assets/alarm-clock.mp3" controls=""></audio><script type="text/javascript" src="app.js"></script></body></html>
